# proteus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  Makefile  README.md  jit.cpp  test.cpp
.github/workflows/: check-clang-format.yml  ci-build-test.yml
.gitlab/: custom-jobs-and-variables.yml  subscribed-pipelines.yml
.gitlab/jobs/: lassen.yml  tioga.yml
cmake/: SetupLLVM.cmake  proteusConfig.cmake.in
lib/: CMakeLists.txt  CompilerInterfaceDevice.cpp  CompilerInterfaceDevice.h  CompilerInterfaceDeviceCUDA.cpp  CompilerInterfaceDeviceHIP.cpp  CompilerInterfaceDeviceInternal.hpp  CompilerInterfaceHost.cpp  CompilerInterfaceTypes.h  JitCache.hpp  JitEngine.cpp  JitEngine.hpp  JitEngineDevice.hpp  JitEngineDeviceCUDA.cpp  JitEngineDeviceCUDA.hpp  JitEngineDeviceHIP.cpp  JitEngineDeviceHIP.hpp  JitEngineHost.cpp  JitEngineHost.hpp  JitStorageCache.hpp  JitVariable.hpp  TimeTracing.hpp  TransformArgumentSpecialization.hpp  TransformLambdaSpecialization.hpp  Utils.h  UtilsCUDA.h  UtilsHIP.h  jit.cpp
pass/: CMakeLists.txt  HelloWorld.cpp  JitPass.cpp  ProteusPass.cpp
scripts/: build-llvm-lassen.sh  setup-amd.sh  setup-lassen.sh  setup-tioga.sh
scripts/gitlab/: ci-build-test.sh
tests/: CMakeLists.txt  daxpy.cpp  lit-main.py
tests/cpu/: CMakeLists.txt  daxpy.cpp  lambda.cpp  types.cpp
tests/cuda/: CMakeLists.txt  daxpy.cpp  indirect_launcher.cpp  kernel.cpp  kernel_args.cpp  kernel_cache.cpp  kernel_launches.cpp  kernel_launches_args.cpp  kernels_gvar.cpp
tests/gpu/: CMakeLists.txt  daxpy.cpp  device_func.cpp  file1_kernel.cpp  file2_kernel.cpp  gpu_common.h  indirect_fallthrough.cpp  indirect_launcher.cpp  indirect_launcher_arg.cpp  indirect_launcher_multi.cpp  indirect_launcher_multi_arg.cpp  indirect_launcher_tpl_multi.cpp  indirect_launcher_tpl_multi_arg.cpp  kernel.cpp  kernel_args.cpp  kernel_cache.cpp  kernel_calls_func.cpp  kernel_calls_func_lib.cpp  kernel_host_device_jit.cpp  kernel_host_jit.cpp  kernel_launches.cpp  kernel_launches_args.cpp  kernel_unused_gvar.cpp  kernel_unused_gvar_def.cpp  kernels_gvar.cpp  types.cpp
tests/hip/: CMakeLists.txt  daxpy.cpp  daxpy_hip.cpp  indirect_launcher.cpp  kernel.cpp  kernel_args.cpp  kernel_cache.cpp  kernel_launches.cpp  kernel_launches_args.cpp  kernels_gvar.cpp
